# ocloud

./: README.md
.github/workflows/: ci.yml
app/: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  build.rs  compose.yaml  dev.env  example.env  lib.rs  rust-zero-to-prod-summary.md  start_dev.sh
app/.claude/: settings.local.json
app/.github/workflows/: ci.yml
app/.sqlx/: query-169c4538ad20c200531321b138e4ec2aa33f774b011643ae28ab6296a496ccbd.json  query-1814ef57f5f402bf27b6619b116c01fa1b98c64d2bf54985c32cdb6ee7ba3be5.json  query-197a7a0f7979568eb0f0c50b4aa330f411185c9bf1d4e75b88f93ea7678743c5.json  query-1c913820dc9bf067059ec856694b00bfccd4245b626862f74665688c7ac4b358.json  query-21edbebe86d729a55f0a7726c7470205ac4a5f698229f944f13be02bfc23fcd3.json  query-35a00cca2f9a556d41a7d1fd3235ac464aeb94e1c0623a1f72118972872609fe.json  query-4ac9ea0ca5bbadd9635848731aeb43d32481d5e8242a9341c4d1985eb96d6289.json  query-67a2b6996a800961f7a9fda9b8275efd63a851ff4a4ae758f2dfe6dc9b2398f0.json  query-913f23a9f99a14323d9f897aafda41e5dcd1fe77d742551f0a56da623c8a15e9.json  query-9a35230bc4c78909e7cf91aedbf9960c9b0c05d1c00ada773b173033a2a7f7e2.json  query-d39a03c6f5e1698cf681d6b6d8ab98fd9f2fd10ea457becd37eaf9805101308b.json  query-da68ddf55f71b1e97ba7e380a58283cf4b5994acd5e6556a681d1da09e04088e.json  query-f5504fd843f5a30ecb07567c17d4d60028543499ce638049d7de060b88a18502.json  query-f876ed3e26dbf440295f7900754b997c6720de8a6a1dfbbd67fbe9cce12a76f5.json  query-fa4651e2b8caed7b78d29ad94f2cb3fed7f9d1a73d123d04aa1fb9abba6d80df.json  query-fbe795ae0e916716b7d59afe92567b90f7da00748d4cebb5e46e60204e6fb67a.json
app/cli/: Cargo.toml
app/cli/src/: api.rs  error.rs  main.rs  subcommands.rs
app/cli/src/commands/: mod.rs  server.rs  upload.rs
app/config/: Cargo.toml
app/config/src/: cli.rs  lib.rs  server.rs  util.rs
app/configuration/: base.yaml  cli.yaml  development.yaml  production.yaml  testing.yaml
app/migrations/: 0001_file_tables.sql  0002_auth_system.sql  0002_sfiles_table.sql  0003_public_files.sql
app/ocloud-macros/: Cargo.toml
app/ocloud-macros/src/: lib.rs
app/server/: Cargo.toml  compose.yaml
app/server/src/: error.rs  lib.rs
app/server/src/controllers/: files.rs  model.rs
app/server/src/storage/: controller.rs  filesystem.rs  mod.rs  model.rs
app/server/src/web/: routes.rs
app/server/src/web/handlers/: auth.rs  base.rs  media.rs  mod.rs
app/src/: api.rs  docker.rs  error.rs  lib.rs  main.rs  subcommands.rs
app/src/cli/: api.rs  error.rs  mod.rs  subcommands.rs
app/src/cli/commands/: mod.rs  server.rs  upload.rs
app/src/commands/: server.rs  upload.rs
app/src/config/: cli.rs  mod.rs  server.rs  settings.rs  util.rs
app/src/server/: db_utils.rs  error.rs  mod.rs  validation.rs
app/src/server/controllers/: auth.rs  files.rs  mod.rs  model.rs  websocket.rs
app/src/server/models/: auth.rs  files.rs  mod.rs
app/src/server/web/: error.rs  middleware.rs  mod.rs  routes.rs
app/src/server/web/handlers/: auth.rs  files.rs  media.rs  mod.rs  ws.rs
app/tests/: auth_integration.rs  auth_password.rs  auth_permissions.rs  file_permissions.rs  health_check.rs  password_only.rs  public_files.rs
app/tests/common/: mod.rs
backend/: Cargo.toml  config.toml
backend/src/: main.rs
backend/src/storage/: controller.rs  filesystem.rs  model.rs
backend/src/web/: error.rs  routes.rs
backend/src/web/handlers/: base.rs
cli/: Cargo.toml
cli/src/: main.rs  upload.rs
frontend/app/: pubspec.yaml
frontend/cli/: Cargo.toml
frontend/cli/src/: api.rs  config.rs  main.rs  upload.rs
frontend/mobile/lib/: main.dart
frontend/web/: package-lock.json  package.json
frontend/web/src/app/: globals.css  layout.tsx  page.tsx
frontend/web/src/app/files/: explorer.tsx  media_viewer.tsx  page.tsx  upload.tsx  utils.tsx
frontend/web/src/app/home/: page.tsx  page_card.tsx
frontend/web/src/app/landing/: landing_page_form.tsx  page.tsx
frontend/web/src/components/: landing.tsx  navbar.tsx  sidebar.tsx
frontend/web/src/components/client/: file_dropper.tsx  landing_page_form.tsx
frontend/web/src/lib/: include.ts
frontend/web/src/lib/api/: auth.ts  media.ts  path.ts  test.ts  types.ts  websocket.ts  wrapper.ts
models/: Cargo.toml
models/src/: lib.rs
ocloud-services/: Cargo.toml
ocloud-services/migrations/: 0002_sfiles_table.sql
ocloud-services/src/: error.rs  main.rs
ocloud-services/src/storage/: backend.rs  local.rs  mod.rs
ocloud-services/src/web/: controller.rs  error.rs  mod.rs  routes.rs
services/: .gitignore  Cargo.toml  README.md  compose.yaml  example.env
services-test/: Cargo.toml
services-test/src/: main.rs  upload.rs
services/migrations/: 0001_media_table.sql
services/src/: error.rs  main.rs
services/src/storage/: controller.rs  filesystem.rs  model.rs
services/src/web/: mod.rs  routes.rs
services/src/web/handlers/: base.rs  mod.rs
