[package]
name = "ocloud"
version = "0.1.1"
edition = "2021"
description = "Command line utilities for a self-hosted cloud"
license = "MIT"
repository = "https://github.com/niooii/ocloud"

include = [
    "src/**/*",
    ".sqlx/**/*",
    "migrations/**/*",
]

[dependencies]
anyhow = "1.0.91"
arboard = "3.4.1"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["multipart", "stream"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tqdm = "0.7.0"
async-stream = "0.3.6"
tokio-util = { version = "0.7.13", features = ["full"] }
futures-util = "0.3.31"
indicatif = "0.17.9"
rustyline = "15.0.0"
lazy_static = "1.5.0"
url = "2.5.4"
bollard = "0.18.1"
inquire = "0.7.5"
toml = "0.8.19"
axum = { version = "0.7.7", features = [ "multipart", "macros" ]}
bytes = "1.7.2"
futures = "0.3.30"
key-mutex = { version = "0.1.3", features = ["tokio"] }
mime_guess = "2.0.5"
nanoid = "0.4.0"
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = {version = "0.8.3", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
strum_macros = "0.26.4"
tower-http = { version = "0.6.2", features = ["cors"] }
