[package]
name = "ocloud"
version = "0.1.3"
edition = "2021"
description = "Command line utilities for a self-hosted cloud"
license = "MIT"
repository = "https://github.com/niooii/ocloud"

include = [
    "src/**/*",
    ".sqlx/**/*",
    "migrations/**/*",
]

[lib]
name = "ocloud"
path = "src/lib.rs"

[[bin]]
name = "ocloud"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
arboard = "3.4.1"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["multipart", "stream", "json"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tqdm = "0.7.0"
async-stream = "0.3.6"
tokio-util = { version = "0.7.13", features = ["full"] }
tokio-stream = "0.1.16"
futures-util = "0.3.31"
ocloud-macros = { path = "ocloud-macros" }
indicatif = "0.17.9"
rustyline = "15.0.0"
lazy_static = "1.5.0"
url = "2.5.4"
inquire = "0.7.5"
axum = { version = "0.7.7", features = [ "multipart", "macros", "ws" ] }
bytes = "1.7.2"
futures = "0.3.30"
key-mutex = { version = "0.1.3", features = ["tokio"] }
mime_guess = "2.0.5"
nanoid = "0.4.0"
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
strum_macros = "0.26.4"
enum_dispatch = "0.3"
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = { version = "0.4.39", features = ["serde"] }
pretty_env_logger = "0.5.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.14"
config = "0.14.1"
secrecy = { version = "0.10.0", features = ["serde"] }
serde_yaml = "0.9.34"
thiserror = "1.0.69"
tower = { version = "0.5.1", features = ["limit", "buffer", "timeout"] }
tower_governor = "0.4.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
dashmap = "6.1.0"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "0.4.4"
wiremock = "0.6.0"
once_cell = "1.20.2"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
