[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
arboard = "3.4.1"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["multipart", "stream"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { workspace = true }
tqdm = "0.7.0"
async-stream = "0.3.6"
tokio-util = { version = "0.7.13", features = ["full"] }
futures-util = "0.3.31"
indicatif = "0.17.9"
rustyline = "15.0.0"
lazy_static = "1.5.0"
url = "2.5.4"
config = { version = "0.1.0", path = "../config" }
server = { version = "0.1.0", path = "../server" }
bollard = "0.18.1"
inquire = "0.7.5"
