[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = [ "multipart", "macros" ]}
bytes = "1.7.2"
dirs = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
key-mutex = { version = "0.1.3", features = ["tokio"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = {version = "0.8.2", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
config = { path = "../config" }
tower-http = { version = "0.6.2", features = ["cors"] }
